<resources>
    <string name="app_name">SOS VE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="form_fragment_label">Formulaire</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="consent_header">Autorisation de prelevement permanent</string>
    <string name="coordinates_header">Mes coordonees</string>
    <string name="societe">Société</string>
    <string name="person_physique">Personne physique</string>
    <string name="name_lastname_label">Nom et prénom</string>
    <string name="mandatory_field">Champs obligatoire</string>
    <string name="profession_label">profession</string>
    <string name="address_label">adresse</string>
    <string name="e_mail_label">E-mail</string>
    <string name="telephone_label">Téléphone</string>
    <string name="raison_sociale">Raison sociale</string>
    <string name="matricule_fiscale">Matricule fiscale</string>
    <string name="premier_responsable">Premier responsable</string>
    <string name="banking_header">Mes coordonnes bancaire</string>
    <string name="banque">Banque</string>
    <string name="agence">Agence</string>
    <string name="rib_label">RIB</string>
    <string name="rib_hint">10 999 000 111 101 22 11 08</string>
    <string name="premier_mois_de_prelevement">Premier mois de prelevement</string>
    <string name="signature_header">Signature</string>
    <string name="fait_a">fait a</string>
    <string name="signature_label">Signature du parrain</string>
    <string name="en_donnant">En donnant</string>
    <string name="en_lettre">En lettre</string>
    <string name="envoyer">Envoyer</string>
    <string name="form_input_error">Erreur</string>
</resources>