<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/signatureHeader"
        style="@style/SectionHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/signature_header"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/banking_header"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/banque_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:hint="@string/fait_a"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signatureHeader"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fait_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:hint="@string/fait_a"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signatureHeader"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/le"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:enabled="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/signatureHeader"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/leEditText"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/signature_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/fait_a"
        app:layout_constraintTop_toBottomOf="@id/fait_a"
        />

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/square_shape_signature_background"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/le"
        app:layout_constraintStart_toStartOf="@id/fait_a"
        app:layout_constraintTop_toBottomOf="@id/signature_label"
        app:penColor="@color/black"
        />

    <ImageView
        android:id="@+id/clearSignature"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="2dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@id/signature_pad"
        app:layout_constraintTop_toTopOf="@id/signature_pad"
        />

</androidx.constraintlayout.widget.ConstraintLayout>